# PySymmetry

./: .gitignore  README.md  pyproject.toml
docs/api/: core_matrix.md  index.md  quantum_states.md  tools_performance.md
docs/tutorials/: getting_started.md  group_theory_tutorial.md  index.md  matrix_tutorial.md  quantum_tutorial.md  visualization_guide.md
examples/: analysis_demo.py  interactive_demo.py  quantum_examples.py  symmetry_demo.py
src/PySyM/core/lie_theory/: abstract_lie_algebra.py  lie_algebra_operations.py  lie_algebra_representation.py  lie_algebra_structure.py  specific_lie_algebra.py
src/PySyM/phys/quantum/: __init__.py  analysis.py  explainer.py  hamiltonian.py  interactive.py  simulator.py  solver.py  states.py
src/PySymmetry/abstract_phys/utils/: spglib_integration.py
src/PySymmetry/core/group_theory/: product_group.py
src/PySymmetry/tools/: __init__.py  lie_algebra_symbolic.py  performance.py
src/PySymmetry/visual/: __init__.py  utils.py  wavefunction3d.py
tests/: test_abstract_phys_robust.py  test_algebraic_structures_robust.py  test_clebsch_gordan.py  test_coverage_modules.py  test_group_theory_robust.py  test_hamiltonian.py  test_irreducible.py  test_lie_algebra.py  test_lie_algebra_performance.py  test_lie_algebra_robust.py  test_lie_algebra_symbolic.py  test_matrix_decompositions.py  test_matrix_factory.py  test_matrix_operations.py  test_performance.py  test_product_group.py  test_quantum_states.py  test_representation_robust.py  test_selection_rules.py  test_simulator.py  test_solver.py  test_special_matrices.py  test_visual.py  test_visual_interactive.py  test_visual_utils.py  test_wigner_Dmatrix.py
