[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySymmetry"
version = "1.0.0"
description = "Python library for symmetry, group theory, and quantum physics applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LDK", email = "bluejam001@163.com"}
]
keywords = [
    "symmetry",
    "group theory",
    "lie algebra",
    "physics",
    "quantum",
    "quantum mechanics",
    "crystallography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]
symbolic = [
    "sympy>=1.12",
]
crystallography = [
    "spglib",
]
visualization = [
    "matplotlib>=3.7",
]
performance = [
    "numba>=0.55",
    "joblib>=1.2",
]
all = [
    "PySymmetry[dev,symbolic,crystallography,visualization,performance]",
]

[project.urls]
Homepage = "https://github.com/cathylinlin/PySymmetry"
Documentation = "https://github.com/cathylinlin/PySymmetry#readme"
Repository = "https://github.com/cathylinlin/PySymmetry"
Issues = "https://github.com/cathylinlin/PySymmetry/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
